View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0025596 | Open CASCADE | OCCT:Modeling Algorithms | public | 2014-12-12 13:25 | 2015-05-14 15:33 |
Reporter | aml | Assigned To | bugmaster | ||
Priority | normal | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Product Version | 6.8.0 | ||||
Target Version | 6.9.0 | Fixed in Version | 6.9.0 | ||
Summary | 0025596: GCPnts_TangentialDeflection creates wrong point distribution for visualization | ||||
Description | GCPnts_TangentialDeflection invoked two times: 1) In shape stored correct distribution 2) For visualization purposes GCPnts_TangentialDeflection invoked once more with lower tolerance and wrong distribution obtained in this case. | ||||
Steps To Reproduce | test bugs moddata_3 bug24959_2 (output image) | ||||
Tags | No tags attached. | ||||
Test case number | bugs moddata_3(013) bug24959_2 | ||||
|
Branch CR25596 has been created by aml. SHA-1: ac3b718c86c8a0f55f824d55bdf70fe3fa59b954 Detailed log of new commits: Author: aml Date: Fri Dec 12 13:40:06 2014 +0300 0025596: GCPnts_TangentialDeflection creates wrong point distribution for visualization Added check to small step after adding new point to prevent possible jump over local splash. If check failed then old step restored. |
|
Dear abv, Please check current state of branch CR25596. |
|
No remarks, please test |
|
Dear aml, Please resolve conflicts in CR25596 during rebasing to current master. |
|
Branch CR25596 has been updated forcibly by aml. SHA-1: 402416122fa24bf023e0eb7c6e1802f85b27fbc0 |
|
Dear apv, CR25596 has been rebased to current master, please test. |
|
Branch CR25596 has been updated forcibly by apv. SHA-1: 67b50bb03ec1eac31622adb8dd89bf30965de517 |
|
Branch CR25596 has been rebased on the current master |
|
Dear BugMaster, Branch CR25596 from occt git-repository (and master from products git-repository) was compiled on Linux, MacOS and Windows platforms and tested. SHA-1: 67b50bb03ec1eac31622adb8dd89bf30965de517 Number of compiler warnings: occt component: Linux: 18 (18 on master) Windows: 0 (0 on master) products component : Linux: 11 (11 on master) Windows: 1 (1 on master) Regressions/Differences: http://occt-tests/CR25596-master-occt/Debian60-64/summary.html http://occt-tests/CR25596-master-occt/Windows-32-VC10/summary.html bugs vis004) bug364 bugs mesh(016) bug24127, bug25519 bugs standard_shading(001) L3 bugs advanced_incmesh(005) B6 bugs advanced_mesh(006) B6 bugs advanced_incmesh_parallel(008) B6 Testing on Linux: Total MEMORY difference: 368980076 / 368966700 Total CPU difference: 48058.01999999999 / 46127.980000000054 Testing on Windows: Total MEMORY difference: 276556860 / 276759540 Total CPU difference: 33119.390625 / 38319.765625 There are differences in images found by testdiff: http://occt-tests.nnov.opencascade.com/CR25596-master-occt/Debian60-64/diff-Debian60-64.html http://occt-tests.nnov.opencascade.com/CR25596-master-occt/Windows-32-VC10/diff-Windows-32-VC10.html http://occt-tests.nnov.opencascade.com/CR25596-master-products/Debian60-64/diff-Debian60-64.html http://occt-tests.nnov.opencascade.com/CR25596-master-products/Windows-32-VC10/diff-Windows-32-VC10.html |
|
Dear apv, I bugs vis004) bug364 bugs mesh(016) bug24127, bug25519 bugs standard_shading(001) L3 bugs advanced_incmesh(005) B6 bugs advanced_mesh(006) B6 bugs advanced_incmesh_parallel(008) B6 In this tests only formal parameters has changed, please update them to new values. New behavior is correct. II Changes in images are caused by new behavior of triangulation which leads to increase of triangles and nodes in some cases. There is no bad triangulation detected by diffimage, moreover in bug24220 shading in 3d viewer fixed. |
|
Test-cases will be corrected according to new behavior. |
|
Branch CR25596 has been deleted by inv. SHA-1: 67b50bb03ec1eac31622adb8dd89bf30965de517 |
occt: master fa89e082 2014-12-12 10:40:06 Committer: bugmaster Details Diff |
0025596: GCPnts_TangentialDeflection creates wrong point distribution for visualization Added check to small step after adding new point to prevent possible jump over local splash. If check failed then old step restored. |
Affected Issues 0025596 |
|
mod - src/GCPnts/GCPnts_TangentialDeflection.cxx | Diff File | ||
mod - src/GCPnts/GCPnts_TangentialDeflection.gxx | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2014-12-12 13:25 | aml | New Issue | |
2014-12-12 13:25 | aml | Assigned To | => aml |
2014-12-12 15:03 | git | Note Added: 0035360 | |
2014-12-12 15:05 | aml | Note Added: 0035361 | |
2014-12-12 15:05 | aml | Assigned To | aml => abv |
2014-12-12 15:05 | aml | Status | new => resolved |
2014-12-23 23:59 | abv | Note Added: 0035637 | |
2014-12-23 23:59 | abv | Assigned To | abv => bugmaster |
2014-12-23 23:59 | abv | Status | resolved => reviewed |
2014-12-24 11:20 |
|
Assigned To | bugmaster => apv |
2014-12-26 19:11 |
|
Note Added: 0035793 | |
2014-12-26 19:11 |
|
Assigned To | apv => aml |
2014-12-26 19:11 |
|
Status | reviewed => feedback |
2015-01-12 08:40 | git | Note Added: 0035938 | |
2015-01-12 08:41 | aml | Note Added: 0035939 | |
2015-01-12 08:41 | aml | Assigned To | aml => apv |
2015-01-12 08:41 | aml | Status | feedback => reviewed |
2015-01-13 18:44 | git | Note Added: 0036019 | |
2015-01-13 18:45 |
|
Note Added: 0036020 | |
2015-01-14 16:56 |
|
Note Added: 0036060 | |
2015-01-14 16:56 |
|
Assigned To | apv => aml |
2015-01-14 16:56 |
|
Status | reviewed => assigned |
2015-01-15 09:18 | aml | Note Added: 0036080 | |
2015-01-15 09:18 | aml | Assigned To | aml => apv |
2015-01-15 09:18 | aml | Status | assigned => feedback |
2015-01-15 13:42 |
|
Note Added: 0036101 | |
2015-01-15 13:42 |
|
Assigned To | apv => bugmaster |
2015-01-15 13:42 |
|
Status | feedback => tested |
2015-01-15 13:45 |
|
Test case number | => bugs moddata_3(013) bug24959_2 |
2015-01-16 13:37 | bugmaster | Changeset attached | => occt master fa89e082 |
2015-01-16 13:37 | bugmaster | Status | tested => verified |
2015-01-16 13:37 | bugmaster | Resolution | open => fixed |
2015-01-26 12:32 | git | Note Added: 0036525 | |
2015-05-14 15:29 |
|
Status | verified => closed |
2015-05-14 15:33 |
|
Fixed in Version | => 6.9.0 |