0025596: GCPnts_TangentialDeflection creates wrong point distribution for visualization

Added check to small step after adding new point to prevent possible jump over local splash. If check failed then old step restored.